2006-06-05  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/rxnformat.cpp (WriteMolecule): Cast size_t to
	unsigned for sprintf statement. Eliminates warning with GCC.

	* src/formats/mpdformat.cpp: Eliminate unsigned/signed warning.

	* src/formats/*format.cpp (more files): Remove calls to sprintf,
	sscanf, strcpy.

	* src/residue.cpp: Make sure to call base class in copy
	ctor. Eliminates GCC warning.

	* test/cmltest/test.sh: Skip test if cml cannot be loaded.

2006-06-04 Chris Morley <ob@gaseq.co.uk>
	
	* src/formats/xml/xml.cpp(ReadXML): Made so that returns false at
	the end of the file. Solves problem with roundtrip.
	
	* src/formats/mdlformat.cpp(ReadMolecule): Added Trim to new code
	to read multiline properties, because was sometimes confused by
	trailing CRs in Windows.
	
2006-06-04  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* configure.in, configure, src/config.h.in: Update to include
	snprintf prototype in all files -- increased use with changing
	sprintf calls to snprintf to minimize buffer overflows.

	* src/math/*: Remove calls to exit(!) on faulty input -- return
	errors and default values.

	* src/formats/*format.cpp (more files): Remove calls to sprintf,
	sscanf, strcpy.

	* test/*.sh: Protect against existing environment variables when
	re-defining. For test calls, we need to ensure only our binaries
	load.

2006-06-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/data.cpp (OBElementTable::ParseLine): Change sscanf call to
	use fixed length (256 chars) for name string, rather than
	preprocessor #define BUFF_SIZE.

	* src/formats/xml/xml.cpp, src/formats/xml/xml.h, 
	src/formats/*format.cpp: Remove calls to sprintf, sscanf, strcpy.

	* scripts/*: Regenerate to add Craig's UnsetHash() and
	UnsetWedge() calls.

2006-05-30  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/xml/xml.cpp (ReadXML): Fix PR#1486678 for
	multi-molecule files. The libxml2 library is very unhappy reading